@@ -29,7 +29,7 @@ Version 1.4.4 - CVS
   - Fix that viewing the last page of a mailbox with one message always
     claimed that the total of messages in that mailbox was 1.
   - Alignment of title text above folder list fixed.
-  - Added Uighur language support.
+  - Added Uighur translation support.
   - Added status bar to compose window when "Compose In New Window" is used.
   - Fixed issue with user setting display of messages to 0 per page.  Fixes
     bug #960447.
@@ -58,6 +58,7 @@ Version 1.4.4 - CVS
     User-Agent + X-Priority headers correctly. Older versions have to fix
     rules/20_head_tests.cf.
   - When replying to message with a " in the subject, the " was a replaced with a '.
+  - Added Bengali translation support.
 
 Version 1.4.3a - 2 June 2004
 ----------------------------
